# Jaxapp

./: CMakeLists.txt  README.md
examples/: hello.jx
include/: AST.h  ASTPrinter.h  CodeGen.h  Lexer.h  Parser.h  Semantic.h  Token.h
src/: ASTPrinter.cpp  CodeGen.cpp  Lexer.cpp  Parser.cpp  Semantic.cpp  Token.cpp  main.cpp
